--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,500,600,700&display=swap&subset=latin-ext,vietnamese" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>COUNTER</title>
   </head>
